# orcamentoPessoalOFX

./: .coverage  .dockerignore  .env  .env-contrib  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  categories.json  compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  tasks.py
orcamento_2026/: api.py  asgi.py  urls.py  wsgi.py
orcamento_2026/core/: admin.py  api.py  apps.py  forms.py  models.py  schemas.py  urls.py  views.py
orcamento_2026/core/management/commands/: consolidar.py  consolidate.py  import_ofx.py  importar.py  importar_ofx.py  popular.py  run_bot.py  setup_categories.py  sugerir.py
orcamento_2026/core/migrations/: 0001_initial.py  0002_account_category_subcategory_transaction_expense.py  0003_alter_account_options_alter_category_options_and_more.py
orcamento_2026/core/services/: consolidation.py  import_ofx.py  importer.py  suggestions.py
orcamento_2026/core/services/utils/: date_utils.py  db_utils.py
orcamento_2026/core/templates/: index.html
orcamento_2026/core/templates/core/: category_confirm_delete.html  category_form.html  category_list.html  dashboard.html  expense_confirm_delete.html  expense_form.html  expense_list.html  import_ofx.html  login.html  subcategory_confirm_delete.html  subcategory_form.html  subcategory_list.html  suggestion_generate.html  suggestion_list.html  transaction_consolidate.html  transaction_list.html
orcamento_2026/core/tests/: test_auth_redirects.py  test_commands.py  test_consolidation.py  test_dashboard_fixes.py  test_date_utils.py  test_db_utils.py  test_import_ofx.py  test_logic.py  test_models.py  test_suggestions.py  test_ui_views.py  test_views.py
orcamento_2026/settings/: __init__.py  base.py  development.py  production.py
orcamento_2026/templates/: base.html
