[project]
name = "orcamento-2026"
version = "0.0.1"
description = "Le os arquivo OFX dos bancos que utilizo e grava no banco de dados com informações sobre a compra, categoria etc"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==6.0.2",
    "psycopg2-binary==2.9.11",
    "dj-database-url==3.1.0",
    "gunicorn==25.1.0",
    "python-decouple==3.8",
    "whitenoise==6.11.0",
    "ofxparse==0.21",
    "requests==2.32.5",
]

[dependency-groups]
dev = [
    "black==26.1.0",
    "faker==40.4.0",
    "ipython==9.10.0",
    "invoke==2.2.1",
    "isort==7.0.0",
    "parameterized==0.9.0",
    "django-debug-toolbar==6.2.0",
    "django-extensions==4.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "pytest-subtests==0.15.0",
    "pytest-sugar==1.1.1",
    "pre-commit==4.5.1"
]

[tool.black]
line-length = 140
target-version = ['py313']

[tool.isort]
profile = "django"
line_length = 140

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "orcamento_2026.settings"
python_files = "test_*.py"
minversion = "7.4.0"
pythonpath = "./orcamento-2026/**/test_*.py"
addopts = """
    -ra -q -s -x -vvv \
    --doctest-modules \
    --disable-pytest-warnings \
    --cov=orcamento-2026 \
    --cov-report=html:coverage
    """

[tool.coverage.report]
skip_empty = true
branch = true
source = "orcamento-2026/**/*.py"
omit = [
    "orcamento-2026/**/migrations/*.py"
]
